--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -48,6 +48,9 @@
        <property name="undoRedoEnabled">
         <bool>false</bool>
        </property>
+       <property name="lineWrapMode">
+        <enum>QTextEdit::NoWrap</enum>
+       </property>
        <property name="readOnly">
         <bool>true</bool>
        </property>
